(fix) docker compose script v2 migration

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "db:up": "docker-compose up -d && yarn prisma:migrate",
-    "db:down": "docker-compose down --volumes --remove-orphans",
+    "db:up": "docker compose up -d && yarn prisma:migrate",
+    "db:down": "docker compose down --volumes --remove-orphans",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:push": "prisma db push",
     "prisma:gen": "prisma generate",
